# awaaz-e-sehat

./: .gitignore  README.md  app.py  application.py  database.py  index.html  models.py  pyproject.toml  requirements.txt  run  run.py  webforms.py
awaaz_e_sehat/: db.sqlite3  manage.py
awaaz_e_sehat/awaaz_e_sehat/: asgi.py  settings.py  urls.py  wsgi.py
awaaz_e_sehat/pages/: tests.py
awaaz_e_sehat/pages/templates/: _base.html  home.html
awaaz_e_sehat/templates/: home.html
awaaz_e_sehat/templates/registration/: login.html  signup.html
awaaz_e_sehat/users/: admin.py  forms.py  tests.py  views.py
awaaz_e_sehat/users/migrations/: 0001_initial.py
doctor/: change-password.html  cond-at-booking.html  dashboard.html  login.html  patient.html  record-family-hist.html  record-medical-hist.html  record-present-preg.html  record-prev-preg.html  record-proposed-plan.html  record-socio-hist.html  signup.html  update-profile.html
instance/: db.sqlite3
main/: __init__.py  database.py  extensions.py  prompting.py  views.py
main/doctor/: __init__.py  blueprints.py  forms.py  models.py  utils.py  views.py
main/doctor/templates/: dashboard.html  loading_screen.html  login.html  patient.html  record_condition_at_booking.html  record_family_history.html  (+12 more)
main/templates/: 404.html  index.html
migrations/versions/: d655c84d3823_.py  f6e5e0afc2a2_.py
nurse/: change-password.html  dashboard.html  login.html  patient.html  patients.html  signup.html  thank-you.html  update-profile.html  vitals.html
static/transcriptions/: transcription1.txt
templates/: 500.html
(+14 files in other folders)
